# openapi_cli

./: Cargo.toml  Justfile
src/: main.rs
src/command/: insert.rs
